<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">stareyou</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="contacts_color">#0000CD</string>
    <string name="help_tip">互助</string>
    <string name="share_tip">分享</string>
    <string name="contacts_tip">联系人</string>
    <string name="liaotian_tip">聊天</string>
    <string name="account_tip">账号</string>
    <string name="aibangquan">爱帮圈</string>
    <string name="dingdan">订单</string>
    <string name="haorenquan">好人圈</string>
    <string name="xiaoxi">消息</string>
    <string name="manyidu">满意度</string>

    <declare-styleable name="CustomIndicator">
        <attr name="tab_number" format="integer"></attr>
        <attr name="tab_width" format="dimension"></attr>
        <attr name="tab_color" format="color"></attr>
    </declare-styleable>
    <!-- 账号界面 -->
    <string name="text_tip">发表列表</string>
    <string name="shoucang_tip">收藏列表</string>
    <string name="photo_tip">照片列表</string>
    <string name="video_tip">视频列表</string>
    <string name="fankui">反馈建议</string>
    <string name="tuichu">退出登录</string>

    <!-- 默认数值 -->
    <string name="default_number">--</string>
    <string name="banner_text">stareyou只为遇见更好的自己</string>
    <string name="my_concern">我的关注</string>
    <string name="my_fensi">我的粉丝</string>
    <string name="my_xiangzhu">我相助于</string>
    <string name="my_shouzhu">我受助于</string>
    <string name="lr">登录/注册</string>
    <string name="zhuce">注册</string>
    <string name="lucky">幸福度:</string>
    <string name="fabiao">发表</string>
    <string name="shipin">视频</string>
    <string name="zhaopian">照片</string>
    <string name="shoucang">收藏</string>
    <string name="guanzhu">关注</string>
    <string name="fensi">粉丝</string>
    <string name="bangzhu">帮助</string>
    <string name="zongzhi">《stareyou网站服务理念》</string>
    <string name="agree">我已阅读并接受</string>
    <string name="newuser_zhuce">新用户注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="denglu">登录</string>
    <string name="input_password">请填入密码(6到12位字符)</string>
    <string name="input_account">请填入账号</string>
    <string name="username">用户名</string>
    <string name="input_username">请输入用户名(不超过8个字符)</string>
    <string name="password">密码</string>
    <string name="gender">性别</string>
    <string name="men">男</string>
    <string name="women">女</string>
    <string name="phone">中国+86</string>
    <string name="input_phone">请填入您的手机号</string>
    <string name="input_IdentifyCode">请填入获取到的验证码</string>
    <string name="get_IdentifyCode">获取验证码</string>
    <string name="shenqingzhuce">申请注册</string>
    <string name="zhuceing">请稍等,正在注册</string>
    <string name="dengluing">请稍等,正在登录</string>
    <string name="waiting">请稍等</string>
    <string name="huoquweizhi">正在获取位置</string>
    <string name="zhengzaihuoqu">正在获取</string>
    <string name="paizhao">拍照</string>
    <string name="luxiang">录像</string>
    <string name="from">从相册中选择</string>
    <string name="quxiao">取消</string>

    <!-- 发表帮助 -->
    <string name="send_help">发布一条需求</string>
    <string name="title_help">标题</string>
    <string name="content_help">正文</string>
    <string name="media_help">选填</string>
    <string name="send_help_title">输入标题(不超过15个字符)</string>
    <string name="send_help_content">输入正文(不超过140个字符)</string>
    <string name="phone_help">手机</string>
    <string name="location">位置</string>
    <string name="send_help_out">发布</string>
    <string name="send_username">用户名</string>
    <string name="send_username_sex">性别</string>

    <!-- 正在加载 -->
    <string name="loading">正在加载...</string>
    <!-- 暂无数据 -->
    <string name="emptydata">暂无数据</string>
    <!-- 需要帮助 -->
    <string name="needhelp">需要帮助</string>
    <!-- 曾帮助过他 -->
    <string name="helphe">人曾帮助过ta</string>
    <!-- 好评度： -->
    <string name="haopingdu">好评度：</string>
    <!-- % -->
    <string name="baifenhao">%</string>
    <!-- 详细帮助信息 -->
    <string name="xiangqing">详情</string>
    <string name="yonghutouxiang">用户头像：</string>
    <string name="yonghuming">用户名：</string>
    <string name="bangzhubiaoti">帮助标题：</string>
    <string name="bangzhuneirong">帮助内容：</string>
    <string name="xiangguantupian">相关图片：</string>
    <string name="xiangguanshipin">相关视频：</string>
    <string name="yonghushoujihao">手机号：</string>
    <string name="weizhi">位置：</string>
    <string name="buganxingqu">不感兴趣 </string>
    <string name="quwenwen">和ta聊聊</string>
    <!-- 聊天界面 -->
    <string name="fasong">发送</string>
    <string name="inputtext">请输入文字内容</string>
    <string name="jiahao">╋</string>
    <string name="luyin">录音</string>
    <string name="zhaoxiang">拍照</string>
    <string name="paishe">拍摄</string>
    <string name="listview_tip">您现在可以和ta聊天了</string>

</resources>