<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/main_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bar"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/main_radio_huzhu"
            style="@style/home_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/help"
            android:text="@string/help_tip" />

        <RadioButton
            android:id="@+id/main_radio_fenxiang"
            style="@style/home_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/share"
            android:text="@string/share_tip" />

        <RadioButton
            android:id="@+id/main_radio_lianxiren"
            style="@style/home_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/add"
            android:text="@string/contacts_tip" />

        <RadioButton
            android:id="@+id/main_radio_liaotian"
            style="@style/home_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/liaotian"
            android:text="@string/liaotian_tip" />

        <RadioButton
            android:id="@+id/main_radio_zhanghao"
            style="@style/home_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/account"
            android:text="@string/account_tip" />
    </RadioGroup>

</LinearLayout>