<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bottom_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sendPhoto"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/paizhao"
        android:textColor="#0000ff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#9e9e9e" />

    <TextView
        android:id="@+id/sendVideo"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/luxiang"
        android:textColor="#0000ff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#9e9e9e" />

    <TextView
        android:id="@+id/choosePic"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/from"
        android:textColor="#0000ff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#9e9e9e" />

    <TextView
        android:id="@+id/sendcancel"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/quxiao"
        android:textColor="#0000ff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>