<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <!-- 标头 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#DCDCDC" >

        <ImageView
            android:id="@+id/r_back"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/zhuce"
            android:textColor="#000000"
            android:textSize="19sp" />
    </RelativeLayout>
    <!-- 用户名 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/security_code_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="16sp" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="#DCDCDC" />

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/input_username"
                android:maxLength="8"
                android:textColor="#000000"
                android:textColorHint="#E8E8E8"
                android:textSize="16sp" />

            <requestFocus />
        </LinearLayout>
    </LinearLayout>
    <!-- 密码 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/security_code_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="36dp"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="16sp" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="#DCDCDC" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:background="@null"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:textColor="#000000"
                android:textColorHint="#E8E8E8"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
    <!-- 性别 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/security_code_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="36dp"
                android:text="@string/gender"
                android:textColor="#000000"
                android:textSize="16sp" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="#DCDCDC" />

            <RadioGroup
                android:id="@+id/radioGroup_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_wmen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/women"
                    android:textColor="#000000" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/radio_men"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/men"
                    android:textColor="#000000" >
                </RadioButton>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <!-- 手机号 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/security_code_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="8dp"
                android:text="@string/phone"
                android:textColor="#000000"
                android:textSize="16sp" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="#DCDCDC" />

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:digits="0123456789"
                android:hint="@string/input_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="#000000"
                android:textColorHint="#E8E8E8"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/security_code_bg" >

            <EditText
                android:id="@+id/input_Code"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:hint="@string/input_IdentifyCode"
                android:paddingTop="8dp"
                android:textColor="#000000"
                android:textColorHint="#E8E8E8"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/get_Code"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:gravity="center"
            android:text="@string/get_IdentifyCode"
            android:textColor="@color/main_color_white"
            android:textSize="17sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:clickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/zongzhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/zongzhi"
            android:textColor="#FF8C69" />
    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:gravity="center"
        android:text="@string/shenqingzhuce"
        android:textColor="@color/main_color_white"
        android:textSize="17sp" />

</LinearLayout>