<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <!-- 标头 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#DCDCDC" >

        <ImageView
            android:id="@+id/dl_back"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/denglu"
            android:textColor="#000000"
            android:textSize="19sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#DCDCDC" />
    <!-- 头像 -->

    <LinearLayout
        android:id="@+id/login_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/head_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_user_head"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/boy" />
    </LinearLayout>

    <!-- 账号 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/security_code_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/input_account"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#E8E8E8"
                android:textSize="16sp" />

            <requestFocus />
        </LinearLayout>
    </LinearLayout>
    <!-- 密码 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/security_code_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:textColor="#000000"
                android:textColorHint="#E8E8E8"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/forget_password"
            android:textColor="#8B5A00" />

        <TextView
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:text="@string/newuser_zhuce"
            android:textColor="#8B5A00" />
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/buttonshape"
        android:gravity="center"
        android:text="@string/denglu"
        android:textColor="#fff"
        android:textSize="17sp" />

</LinearLayout>